回収対象フラグで未解除案件を管理できるようにする
